# masiro-reader

./: .gitignore  Makefile.am  README.md  configure.ac  cppcheck_report.txt  debug.h
.github/workflows/: analysis.yml  build-and-test.yml  compile-32.yml  compile-64.yml  compile-and-test.yml
lib/button/: Makefile.am  button.cpp
lib/display/: Makefile.am  bufferpool.cpp  bufferpool.h  display.cpp  display.h  frame.cpp  frame.h
lib/dom/: Makefile.am  domnode.cpp  style.h
lib/dom/style/: padding.cpp  padding.h  position.cpp  position.h  textalign.cpp  textalign.h
lib/dom/style/_defs/: fontstyle.h  margin.h  positiontype.h  textalign.h  textindent.h
lib/dom/tests/styles/: test_textindent.h
lib/epd37/: Makefile.am  epd2in13b.cpp  epd2in13b.h  epdif.cpp  epdif.h
lib/fonts/: Makefile.am  codepoint.cpp  codepoint.h  font.cpp  font.h  fontface.cpp  fontface.h  fontmetrics.cpp  fontmetrics.h  stb_truetype.h
lib/fonts/tests/: test.cpp  test_font.h  test_fontface.h  test_fontfamily.h
lib/ft6336/: Makefile.am
lib/graphics/: Makefile.am  glyphinfo.cpp  graphic.cpp  graphic.h  imagelayer.cpp  imagelayer.h  layer.cpp  layer.h  shapes.h  style.h  text.h  textlayer.cpp  textlayer.h
lib/graphics/shapes/: circle.cpp  circle.h  point.cpp  point.h  twopointshape.cpp  twopointshape.h
lib/graphics/style/: texttypesetting.cpp
lib/graphics/tests/: test.cpp  test_imagelayer.h  test_layer.h  test_textlayer.h
lib/graphics/traits/: layersetters.cpp  layersetters.h
lib/images/: Makefile.am  bmp.cpp  bmp.h  exceptions.hpp
lib/libbtn/: Makefile.am
lib/libdisplay/: Makefile.am  frame.h
lib/libdom/: Makefile.am  domnode.cpp  domnode.h  domtag.h  style.h  treenode.cpp  treenode.h
lib/libdom/style/: margin.cpp  margin.h  textindent.cpp  textindent.h
lib/libdom/style/_defs/: padding.h  position.h  textalign.h
lib/libdom/tests/: test.cpp  test_domnode.h  test_treenode.h
lib/libdom/tests/dom/: test_margin.h  test_padding.h  test_position.h  test_textalign.h  test_textindent.h
lib/libdom/tests/styles/: test_margin.h  test_padding.h  test_position.h  test_textalign.h
lib/libepd37/: Makefile.am  epd2in13b.cpp  epd2in13b.h  epdif.cpp  epdif.h  epdpaint.cpp  epdpaint.h
lib/libepd37/tests/: test.cpp  test_paint.h
lib/libfont/: Makefile.am  codepoint.cpp  codepoint.h  font.cpp  font.h  fontface.cpp  fontface.h  fontfamily.cpp  fontfamily.h  fontmetrics.cpp  fontmetrics.h  u16string.cpp  u16string.h
lib/libfont/tests/: test.cpp  test_codepoint.h  test_font.h  test_fontface.h  test_fontfamily.h  test_u16string.h
lib/libft6336/: Makefile.am
lib/libgraphic/: Makefile.am  frame.cpp  frame.h  imagelayer.cpp  imagelayer.h  layer.cpp  layer.h  style.h  textlayer.cpp  textlayer.h
lib/libgraphic/style/: texttypesetting.cpp
lib/libgraphic/tests/: test.cpp  test_imagelayer.h  test_layer.h  test_textlayer.h
lib/libgraphic/traits/: layersetters.cpp  layersetters.h
lib/libimage/: Makefile.am  bmp.cpp  bmp.h
libmasiro/: display.h  graphics.h  masiro.cpp  masiro.h  text.c  text.cpp  text.h
scripts/: build-bcm2835.sh  build-cpputest.sh  build-dependencies.sh  build.sh  test-install.sh
src/: Makefile.am  main.cpp
src/dom/: textnode.cpp  textnode.h
src/graphic/: layer.cpp  layer.h  paragraph.cpp  paragraph.h  texttypesetting.cpp  texttypesetting.h
